fix(input): wrong width of text-input for iOS
fixes #7388

--- a/src/components/input/input.ios.scss
+++ b/src/components/input/input.ios.scss
@@ -8,7 +8,7 @@ $text-input-ios-background-color:          $list-ios-background-color !default;
 $text-input-ios-margin-top:                $item-ios-padding-top !default;
 $text-input-ios-margin-right:              ($item-ios-padding-right / 2) !default;
 $text-input-ios-margin-bottom:             $item-ios-padding-bottom !default;
-$text-input-ios-margin-left:               0 !default;
+$text-input-ios-margin-left:               0px !default;
 
 $text-input-ios-input-clear-icon-width:    30px !default;
 $text-input-ios-input-clear-icon-color:    rgba(0, 0, 0, .5) !default;
